# MyGrid2

./: .gitignore  Dockerfile  Dockerfile-test  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: build-deploy.yml
backend/: config.py  constants.py  exceptions.py  main.py  oauth2.py  obligations.py  requirements.txt  scheduler.py  schemas.py  signals.py  texts.py  translations.py  utils.py
backend/assets/: README.md  config.py  constants.py  dependencies.py  exceptions.py  main.py  schemas.py  texts.py
backend/db/: config.py  database.py  schema.sql
backend/db/migrations/: 20250809102916_install_citext.sql  20250809110104_create_users_table.sql  20250811140523_create_bannedhistory_table.sql  20250811151709_create_promotedhistory_table.sql  20250811151957_create_premiumhistory_table.sql  20250812134518_create_bannedusernames_table.sql  20250812134530_create_appstatus_table.sql  20250812204704_create_loginattempts_table.sql  20250815035020_create_revokedtokens_table.sql  20250815042221_create_refreshtokens_table.sql  20250905201633_create_referrals_table.sql  20251005090307_create_googleids_table.sql  20251016185212_create_championships_table.sql  20251016185235_create_teams_table.sql  20251016185242_create_drivers_table.sql  20251016185248_create_events_table.sql  20251016185252_create_sessions_table.sql  20251016185314_create_sessionsregistrations_table.sql  20251016185326_create_sessionsresults_table.sql  20251016185342_create_sessionspredictions_table.sql  20251016185411_create_scores_table.sql  20251025085552_create_eventstranslations_table.sql  20251025085636_create_sessionstranslations_table.sql  20251026175506_create_scoresparameters_table.sql  20251105212600_create_ranks_championship_materializedview.sql  20251108095319_create_ranks_events_materializedview.sql  20251108095327_create_ranks_sessions_materializedview.sql  20251205204059_create_userobligations_table.sql  20251214144418_create_appleids_table.sql  20260203215108_create_wdcpredictions_table.sql  20260203215114_create_wccpredictions_table.sql  20260215153537_create_collectibles_table.sql  20260215154056_create_userscollectibles_table.sql  20260215204125_create_unsubscribed_table.sql  20260222162507_create_collmdpp_table.sql  20260225212055_create_pushtokens_table.sql  20260304221356_create_lostpw_table.sql  20260322144230_create_sessionsreactions_table.sql  20260502132337_create_leagues_table.sql  20260502132446_create_leaguesusers_table.sql  (+3 more)
backend/images/: README.md  main.py
backend/join/: README.md  config.py  main.py
backend/leagues/: README.md  schemas.py  utils.py
backend/mailings/: README.md  config.py  main.py
backend/mails-distrib/: README.md  main.py
backend/openf1/: README.md  config.py  dependencies.py  exceptions.py  main.py  schemas.py  texts.py
backend/openf1-engine/: config.py  fetcher.py
backend/src/appstatus/: exceptions.py  schemas.py  server.py  texts.py
backend/src/assets/: router.py
backend/src/auth/: apple.py  constants.py  exceptions.py  google.py  listener.py  notifications.py  (+7 more)
frontend/MyGridApp/: app.config.ts  app.json  package-lock.json  package.json
manager/mygrid-manager/: next.config.ts  package-lock.json  package.json
tests/test_backend/: conftest.py
(+316 files in other folders)
