[project]
name = "mygrid2"
version = "2.0.0"
description = "MyGrid package containing the motorsport's pronostics project."
authors = [
    {name = "Jeremy Andriambolisoa",email = "andriambolisoa.jeremy@outlook.fr"},
    {name = "Théo Duhautois",email = "theoduhautois@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "bcrypt (==4.3.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)"
]
